--- a/src/RidingAnywhere-client/css/DefaultHeaderMain.css
+++ b/src/RidingAnywhere-client/css/DefaultHeaderMain.css
@@ -72,50 +72,29 @@
 
 .topNav{
     width: 100%;
-    height: 50px;
-    margin-top: 100px;
-    margin-bottom: 25px;
+    height: 80px;
+    margin-top: 105px;
+    margin-bottom: 20px;
     display: flex;
+    align-items: end;
     transition: height 1.5s ease;
 }
 
-.NavMenu{
-    opacity: 0;
-    transition: opacity 0.5s ease;
-}
-
-.topNav:hover{
-    height: 100px;
-    transition: height 1.5s ease;
-    .NavMenu{
-        opacity: 1;
-        transition: opacity 0.5s ease 0.6s;
+.NavMain{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 95%;
+    height: max-content;
+    .TitleLine{
+        width: 95%;
+        display: flex;
+        justify-content: space-between;
     }
 }
 
-.NavMiain{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-}
-
-.NavMiain h1{
-    margin: 10px 10px 10px 10px;
-    font-size: 35px;
-    padding-left: 10px;
-    padding-bottom: 5px;
-    border-bottom: 2px dashed rgba(0, 0, 0, 0.932);
-    font-family: Hobo_BT;
-    background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
-    font-weight: bold;
-    -webkit-text-stroke-width: 0.2px;
-    -webkit-text-stroke-color: black;
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-}
-
 .NavMenu{
+    width: 100%;
     display: flex;
 }
 
@@ -125,16 +104,16 @@
     flex-grow: 1;
     text-align: center;
     justify-items: center;
-    font-size: large;
+    font-size: 30px;
     font-weight: bold;
     font-family: Hobo_BT;
-    text-shadow: 1px 1px whitesmoke;
+    text-shadow: 2px 2px rgb(198, 198, 198);
     transition: all 0.5s;
     color: black;
 }
 
 .NavCategory:hover{
-    font-size: larger;
+    font-size: 30px;
     text-shadow: none;
     background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
     font-weight: bold;
