2024. 10. 07 데이터 수정 및 삭제
🛠️ 게시글 작성 페이지에서 등록 완료 되었을 때 보드 리스트로 복귀하도록 설정
🗑️ 홈페이지에서 콘솔로그 삭제
🛠️ 홈페이지에서 .ListHeader CSS 수정

--- a/src/RidingAnywhere-client/css/homepage.css
+++ b/src/RidingAnywhere-client/css/homepage.css
@@ -39,6 +39,8 @@
         }
         .ListHeader{
             height: 10%;
+            display: flex;
+            align-items: center;
         }
         .ListHeader{
             display: flex;
