2024. 10. 07 홈페이지 CSS 수정
🛠️ 홈페이지 CSS 수정

--- a/src/RidingAnywhere-client/css/homepage.css
+++ b/src/RidingAnywhere-client/css/homepage.css
@@ -40,9 +40,11 @@
             align-items: center;
             gap: 10px;
             .boardType{
+                text-align: center;
                 width: 30%;
             }
             .boardTitle{
+                text-align: center;
                 width: 70%;
             }
         }
