2024. 10. 07 🛠️ 홈페이지 보드 리스트 CSS 수정
🛠️ 미니 보드 리스트 CSS 수정

--- a/src/RidingAnywhere-client/css/homepage.css
+++ b/src/RidingAnywhere-client/css/homepage.css
@@ -57,7 +57,12 @@
             border-top: 2px solid gold;
             overflow-y: scroll;
             scrollbar-width: none;
-            .MiniCrewBoardBox, .MiniRiderBoardBox{
+            .MiniRiderBoardBox{
+                display: flex;
+                width: 100%;
+                height: max-content;
+            }
+            .MiniCrewBoardBox, .MiniRiderBoardBox>label{
                 display: flex;
                 align-items: center;
                 height: 50px;
