--- a/src/RidingAnywhere-client/css/homepage.css
+++ b/src/RidingAnywhere-client/css/homepage.css
@@ -66,6 +66,7 @@
                     display: flex;
                     align-items: center;
                     height: 50px;
+                    width: 100%;
                     padding-left: 30px;
                     gap: 20px;
                     box-sizing: border-box;
@@ -89,10 +90,12 @@
                     height: 100%;
                 }
                 .boardType{
-                    width: 120px;
+                    text-align: center;
+                    width: 30%;
                 }
                 .boardTitle{
-                    flex-grow: 1;
+                    text-align: center;
+                    width: 70%;
                 }
             }
         }
