2024. 10. 07 🛠️ labe Hover CSS 수정

--- a/src/RidingAnywhere-client/css/homepage.css
+++ b/src/RidingAnywhere-client/css/homepage.css
@@ -72,7 +72,7 @@
                     box-sizing: border-box;
                     border-bottom: 1px dashed gray;
                 }
-                .MiniCrewBoardBox:hover, .MiniRiderBoardBox:hover{
+                .MiniCrewBoardBox:hover, .MiniRiderBoardBox>label:hover{
                     cursor: pointer;
                     background-color: gray;
                 }
