--- a/src/RidingAnywhere-client/css/RiderBoard.css
+++ b/src/RidingAnywhere-client/css/RiderBoard.css
@@ -1,6 +1,5 @@
 /* 라이더 보드 메인 라인 */
 .RiderBoard{
-    width: 100%;
     height: 600px;
     border: 2px solid orange;
     display: flex;
@@ -10,7 +9,8 @@
     /* 라이더 보드 탑 라인 */
     .boardTopLine{
         display: flex;
-        width: 100%;
+        width: 80vw;
+        min-width: 1024px;
         justify-content: center;
         box-sizing: border-box;
 
@@ -112,6 +112,12 @@
             }
         }
     }
+    
+    @media (max-width:1024px){
+        .boardTopLine{
+            width: 100%;
+        }
+    }
 
     /* 라이더 보드 목록 영역 */
 
@@ -196,5 +202,5 @@
 
     }
 
-
 }
+
