--- a/src/RidingAnywhere-client/css/index.css
+++ b/src/RidingAnywhere-client/css/index.css
@@ -3,7 +3,7 @@
   src: url(../css/font-family/Hobo_BT.ttf);
 }
 
-body,main {
+body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -13,18 +13,20 @@ body,main {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 1280px;
+  width: 100vw;
   background-color: black;
-
 }
 
 header{
   background-image: url(/public/img/Top_img.jpg);
   background-size: 100% 100%;
   display: flex;
+  justify-content: space-between;
   margin: 0;
   width: 100%;
-  height: 300px; 
+  height: auto;
+  min-height: 100px; 
+  max-height: 200px;
 }
 
 section{
@@ -40,8 +42,9 @@ footer{
   position: relative;
   bottom: 0;
   flex-direction: column;
-  width: 100%;
-  height: 100px;
+  width: 100vw;
+  min-width: 640px;
+  min-height: 100px;
   background-color: rgba(92, 92, 92, 0.185);
 }
 
