--- a/src/RidingAnywhere-client/css/homepage.css
+++ b/src/RidingAnywhere-client/css/homepage.css
@@ -9,13 +9,14 @@
         display: flex;
         flex-direction: column;
         box-sizing: border-box;
+        padding: 10px 0;
         background-color: black;
         justify-content: center;
         align-items: center;
         .MiniCrewBoardArea, >div{
             display: flex;
             flex-direction: column;
-            height: 95%;
+            height: 100%;
             width: 100%;
             box-sizing: border-box;
             align-items: center;
@@ -111,22 +112,22 @@
         }
 
     }
-    .BlockCrewBoard{
+    .CrewHome>.BlockCrewBoard{
         width: 90%;
-        height: 90%;
+        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         background-color: black;
         box-sizing: border-box;
-        border: 8px solid rgb(66, 66, 66);
+        border: 4px solid rgb(66, 66, 66);
         border-radius: 20px;
     }
     .BlockCrewBoard>img{
         width: 100%;
     }
     .BlockCrewBoard>h1{
-        font-size: 3.5vw;
+        font-size: 3vw;
     }
 }
