--- a/src/RidingAnywhere-client/css/index.css
+++ b/src/RidingAnywhere-client/css/index.css
@@ -22,6 +22,7 @@ header{
   background-size: 100% 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin: 0;
   width: 100%;
   height: auto;
