--- a/src/RidingAnywhere-client/css/index.css
+++ b/src/RidingAnywhere-client/css/index.css
@@ -59,7 +59,7 @@ footer{
   display: flex;
   bottom: 0;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   height: 80px;
   min-width: 500px;
   min-height: 80px;
