--- a/src/RidingAnywhere-client/css/homepage.css
+++ b/src/RidingAnywhere-client/css/homepage.css
@@ -6,10 +6,11 @@
     gap: 10px;
     .CrewHome, .RiderHome{
         width: 45vw;
+        min-width: 225px;
+        height: 100%;
         display: flex;
         flex-direction: column;
         box-sizing: border-box;
-        padding: 10px 0;
         background-color: black;
         justify-content: center;
         align-items: center;
@@ -36,9 +37,8 @@
             }
             .ListHeader{
                 width: 100%;
-                height: 10%;
-                max-height: 60px;
-                min-height: 40px;
+                height: 55px;
+                min-height: 55px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -72,8 +72,7 @@
                     align-items: center;
                     height: 50px;
                     width: 100%;
-                    padding-left: 30px;
-                    gap: 20px;
+                    gap: 10px;
                     box-sizing: border-box;
                     border-bottom: 1px dashed gray;
                 }
