2024. 10. 14 LoginPage CSS ✅ 작업 완료
✅ 로그인 페이지 CSS 작업 완료
✅ 반응형 페이지로 제작 완료

--- a/src/RidingAnywhere-client/css/header_small.css
+++ b/src/RidingAnywhere-client/css/header_small.css
@@ -1,16 +1,13 @@
 .Title{
     display: flex;
-    height: 100px;
+    width: 100%;
+    height: 130px;
+    min-height: 130px;
     align-items: center;
-    margin: 25px 0;
+    justify-content: center;
+    gap: 20px;
 }
 
 .Title>img{
-    height: 150%;
-    margin-left: -40px;
-}
-
-.Title>h1{
-    font-size: 60px;
-    margin-left: 20px;
+    height: 100%;
 }
