--- a/src/RidingAnywhere-client/css/signuppage.css
+++ b/src/RidingAnywhere-client/css/signuppage.css
@@ -1,8 +1,13 @@
-.Section_signup{
+.Main_Signup{
+    height: max-content;
+}
+
+.Section_Signup{
     display: flex;
     align-items: center;
     flex-direction: column;
-    height: 950px;
+    height: max-content;
+    background-color: black;
 }
 
 .Signup_Box{
@@ -10,9 +15,11 @@
     align-items: center;
     flex-direction: column;
     margin-top: 10px;
-    width: 500px;
+    width: 85vw;
+    max-width: 500px;
     height: max-content;
-    border: 5px solid rgb(255, 192, 0);
+    box-sizing: border-box;
+    border: 4px solid rgb(255, 192, 0);
     border-radius: 40px;
     padding: 20px 0;
 }
@@ -49,7 +56,7 @@
     text-shadow: 1px 1px whitesmoke;
 }
 
-.Section_signup .selectCity,.Section_signup .selectTown{
+.Section_Signup .selectCity,.Section_Signup .selectTown{
     width: 200px;
     height: 35px;
     text-align: center;
