--- a/src/RidingAnywhere-client/css/addbikepage.css
+++ b/src/RidingAnywhere-client/css/addbikepage.css
@@ -1,8 +1,13 @@
+.Main_AddBike{
+    height: max-content;
+}
+
 .Section_addbike{
     display: flex;
     align-items: center;
     flex-direction: column;
-    height: 1100px;
+    height: max-content;
+    background-color: black;
 }
 
 .Addbike_Box{
@@ -10,11 +15,14 @@
     align-items: center;
     flex-direction: column;
     margin-top: 20px;
-    width: 1100px;
+    width: 90vw;
+    max-width: 1100px;
+    min-width: 85vw;
     height: 950px;
     border: 5px solid rgb(255, 192, 0);
+    box-sizing: border-box;
     border-radius: 40px;
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 .addbike_line{
