--- a/src/RidingAnywhere-client/css/addbikepage.css
+++ b/src/RidingAnywhere-client/css/addbikepage.css
@@ -31,6 +31,7 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 5px solid orange;
+    box-sizing: border-box;
     margin-bottom: 20px;
     padding-bottom: 10px;
 }
@@ -39,7 +40,6 @@
     font-size: 20px;
     text-align: center;
     min-width: 200x;
-    margin-left: 30px;
 }
 
 .addbike_line>input{
@@ -47,21 +47,43 @@
     margin-left: 10px;
 }
 
-.addbike_line>.brandlogo_img{
+.addbike_line>.box_Title{
     display: flex;
-    width: 200px;
-    height: 200px;
-    margin-right: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 35vw;
+    min-width: 100px;
+    max-width: 200px;
+    height: 100%;
+}
+
+.title_img{
+    width: 16vw;
+    max-width: 150px;
+    min-width: 80px;
+    height: 16vw;
+    max-height: 150px;
+    min-height: 80px;
+}
+
+@media (max-width: 1000px) {
+
 }
 
 .brandBtnLine{
-    box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-around;
-    width: 650px;
-    height: 300px;
+    justify-content: space-between;
+    width: 95vw;
+    max-width: 870px;
+    min-width: 320px;
+    height: 40vw;
+    max-height: 230px;
+    min-height: 200px;
+    box-sizing: border-box;
+    padding : 0 20px;
 }
 
 .modelBtnLine{
