--- a/src/RidingAnywhere-client/css/addbikepage.css
+++ b/src/RidingAnywhere-client/css/addbikepage.css
@@ -76,6 +76,8 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    overflow-y: scroll;
+    scrollbar-width: none;
     width: 95vw;
     max-width: 870px;
     min-width: 320px;
@@ -84,6 +86,7 @@
     min-height: 200px;
     box-sizing: border-box;
     padding : 0 20px;
+    gap: 10px;
 }
 
 .modelBtnLine{
@@ -97,7 +100,12 @@
 }
 
 .brandBtnLine>label{
-    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: max-content;
+    min-width: 90px;
+    min-height: 40px;
 }
 
 .modelBtnLine>label{
