2024. 10. 18 바이크 추가 페이지 CSS 작업 🚧
🛠️ 바이크 모델 버튼 텍스트 작업 오버 플로어 히든✅

--- a/src/RidingAnywhere-client/css/addbikepage.css
+++ b/src/RidingAnywhere-client/css/addbikepage.css
@@ -118,6 +118,9 @@
     height: 30px;
     min-height: 30px;
     max-height: 30px;
+    overflow-x: hidden;
+    text-wrap: nowrap;
+    cursor: pointer;
 }
 
 .bikeImfo_line{
