--- a/src/RidingAnywhere-client/css/addbikepage.css
+++ b/src/RidingAnywhere-client/css/addbikepage.css
@@ -18,11 +18,10 @@
     width: 90vw;
     max-width: 1100px;
     min-width: 450px;
-    height: 950px;
+    height: max-content;
     border: 5px solid rgb(255, 192, 0);
     box-sizing: border-box;
     border-radius: 40px;
-    padding: 10px 0;
 }
 
 .addbike_line{
@@ -33,8 +32,7 @@
     align-items: center;
     border-bottom: 5px solid orange;
     box-sizing: border-box;
-    margin-bottom: 20px;
-    padding-bottom: 10px;
+    padding: 15px 0;
 }
 
 .addbike_line h2{
@@ -129,16 +127,11 @@
 }
 
 .bikeImfo_line{
-    position: absolute;
-    bottom: 70px;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 80px;
-}
-
-.bikeImfo_line>*{
-    margin: 0 15px;
+    height: 60px;
+    min-height: 60px;
 }
 
 .bikeImfo_line>h2{
@@ -152,6 +145,7 @@
     height: 30px;
     border: 3px solid orange;
     border-radius: 5px;
+    margin: 0 15px;
 }
 
 .Addbike_Box > .button_line{
@@ -159,8 +153,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
-    bottom: 25px;
+    height: 70px;
+    min-height: 70px;
 }
 
 .brandBtn, .modelBtn{
