--- a/src/RidingAnywhere-client/css/mypage.css
+++ b/src/RidingAnywhere-client/css/mypage.css
@@ -30,6 +30,7 @@
 .profile{
     width: 50vw;
     max-width: 700px;
+    min-width: 500px;
     height: 600px;
     display: flex;
     flex-direction: column;
@@ -42,7 +43,7 @@
     height: 70px;
     text-align: center;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     text-shadow: none;
     background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
     font-weight: bold;
@@ -61,12 +62,8 @@
 }
 
 .profile_changeLine{
-    position: absolute;
-    display: flex;
-    justify-content: end;
-    padding-top: 10px;
-    padding-right: 20px;
-    width: 100%;
+    width: max-content;
+    height: max-content;
 }
 
 .bikeData{
