2024. 10. 21 🛠️ 마이페이지 프로필 라인 작업🚧
🛠️ 프로필 라인 수정 버튼 이미지 작업

--- a/src/RidingAnywhere-client/css/mypage.css
+++ b/src/RidingAnywhere-client/css/mypage.css
@@ -66,6 +66,12 @@
     height: max-content;
 }
 
+.profile_changeLine>label{
+    width: 70px;
+    height: 70px;
+    cursor: pointer;
+}
+
 .bikeData{
     display: flex;
     flex-direction: column;
@@ -192,11 +198,11 @@
 .bikeInfoBtn:hover{
     cursor: pointer;
 }
-
+/* 
 #profile_changeLine>img{
-    margin-left: 10px;
     width: 70px;
-}
+    height: 70px;
+} */
 
 #profile_changeLine>img:hover{
     cursor: pointer;
