2024. 10. 21 ↩️ 마이 페이지 프로필 이미지 복구 🚧
↩️ 이전 작업으로 되돌리기

--- a/src/RidingAnywhere-client/css/mypage.css
+++ b/src/RidingAnywhere-client/css/mypage.css
@@ -67,6 +67,12 @@
 }
 
 .profile_changeLine>label{
+    width: max-content;
+    height: max-content;
+    box-sizing: border-box;
+}
+
+#profile_changeLine>img{
     width: 70px;
     height: 70px;
     cursor: pointer;
@@ -196,15 +202,6 @@
 }
 
 .bikeInfoBtn:hover{
-    cursor: pointer;
-}
-/* 
-#profile_changeLine>img{
-    width: 70px;
-    height: 70px;
-} */
-
-#profile_changeLine>img:hover{
     cursor: pointer;
 }
 
