--- a/src/RidingAnywhere-client/css/mypage.css
+++ b/src/RidingAnywhere-client/css/mypage.css
@@ -1,3 +1,7 @@
+.Main_MyPage{
+    height: max-content;
+}
+
 .myPage{
     flex-direction: column;
     height: 600px;
@@ -227,19 +231,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 200px;
+    box-sizing: border-box;
+    width: 16vw;
     min-width: 160px;
-    max-width: 200px;
-    height: 200px;
+    max-width: 180px;
+    height: 16vw;
     max-height: 160px;
-    min-height: 200px;
+    min-height: 180px;
     border-radius: 10%;
     border:3px solid orange;
-    
-    >img{
-        width: 200px;
-        height: 200px;
-    }
+}
+.profile_img_box>img{
+    width: 90%;
+    height: 90%;
 }
 .profile_img>h4{
     margin: 0;
@@ -252,11 +256,13 @@
 
 #prfile_btnLline>h3{
     margin-top: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 200px;
+    width: 16vw;
+    min-width: 160px;
+    max-width: 180px;
     height: 40px;
     background-color: black;
     font-weight: bold;
@@ -264,6 +270,7 @@
     text-shadow: 1px 1px whitesmoke;
     border: 2px solid gray;
     border-radius: 5px;
+    box-sizing: border-box;
 }
 
 #prfile_btnLline>h3:hover{
