--- a/src/RidingAnywhere-client/css/mypage.css
+++ b/src/RidingAnywhere-client/css/mypage.css
@@ -31,14 +31,14 @@
     height: max-content;
 }
 
-@media(max-width:1000px){
+@media(max-width:999px){
     .myInfoLine{
         flex-direction: column;
     }
 }
 
 .profile{
-    width: 50vw;
+    width: 75vw;
     max-width: 700px;
     min-width: 500px;
     height: 600px;
@@ -345,8 +345,9 @@
 }
 
 .riderInfo_right, .riderInfo_right>table{
-    margin-top: 10px;
-    width: 450px;
+    width: 100vw;
+    min-width: 320px;
+    max-width: 500px;
 }
 
 .riderInfo_right tr{
