--- a/src/RidingAnywhere-client/css/mypage.css
+++ b/src/RidingAnywhere-client/css/mypage.css
@@ -1,10 +1,15 @@
 .Main_MyPage{
     height: max-content;
+    width: 100vw;
+    min-width: 460px;
+    max-width: 1100px;
 }
 
 .myPage{
     flex-direction: column;
     height: 600px;
+    padding: 0 20px;
+    box-sizing: border-box;
 }
 
 .page_tile{
@@ -39,8 +44,8 @@
 
 .profile{
     width: 75vw;
-    max-width: 700px;
-    min-width: 500px;
+    max-width: 660px;
+    min-width: 460px;
     height: 600px;
     display: flex;
     flex-direction: column;
@@ -222,7 +227,7 @@
     align-items: center;
     flex-direction: column;
     width: 16vw;
-    min-width: 180px;
+    min-width: 160px;
     max-width: 200px;
 }
 
@@ -303,14 +308,14 @@
     height: 140px;
     width: 100%;
     >.userAddress_Line_Top{
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         display: flex;
         height: 70px;
     }
 
     >.userAddress_Line_Bottom{
-        width: 200px;
+        width: 100%;
         height: 70px;
         align-items: center;
         justify-content: center;
@@ -324,7 +329,7 @@
     text-align: center;
     font-weight: bolder;
     font-size: smaller;
-    width: 100vw;
+    width: 10vw;
     height: 50px;
 }
 .userAddress_Line_Bottom>.selectCity{
@@ -336,7 +341,11 @@
     max-width: 100px;
 }
 
-
+.userAddress_changeBtnLine{
+    position: absolute;
+    margin-left: 10px;
+    transform : translateX(85%)
+}
 .userAddress_changeBtnLine>label{
     display: flex;
     cursor: pointer;
@@ -345,7 +354,11 @@
 
 .userAddress_changeBtnLine>label>img{
     width: 70px;
+    min-width: 50px;
+    max-width: 70px;
     height: 70px;
+    min-width: 50px;
+    max-height: 70px;
 }
 
 .riderInfo_right, .riderInfo_right>table{
