2024. 10. 21 🛠️ 마이 페이지 라이더 정보 라인 작업중 🚧

--- a/src/RidingAnywhere-client/css/mypage.css
+++ b/src/RidingAnywhere-client/css/mypage.css
@@ -36,7 +36,7 @@
     height: max-content;
 }
 
-@media(max-width:999px){
+@media(max-width:1060px){
     .myInfoLine{
         flex-direction: column;
     }
@@ -375,9 +375,14 @@
     display: flex;
 }
 
+.riderInfo_right>div>h2:first-child{
+    width: 60vw;
+    min-width: 90px;
+    max-width: 100px;
+}
+
 .riderInfo_right h2{
     text-align: center;
-    margin: 10px 0;
 }
 
 .profile_inputLine{
