--- a/src/RidingAnywhere-client/css/mypage.css
+++ b/src/RidingAnywhere-client/css/mypage.css
@@ -28,7 +28,6 @@
 .myInfoLine{
     border-top: 2px dotted orange;
     border-bottom: 2px dotted orange;
-    border-spacing: 5px;
     display: flex;
     width: 100%;
     justify-content: space-around;
@@ -245,12 +244,10 @@
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
-    width: 14vw;
+    width: 160px;
     min-width: 160px;
-    max-width: 180px;
-    height: 14vw;
+    height: 160px;
     min-height: 160px;
-    max-height: 180px;
     border-radius: 10%;
     border:3px solid orange;
 }
@@ -274,9 +271,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 16vw;
+    width: 160px;
     min-width: 160px;
-    max-width: 180px;
     height: 40px;
     background-color: black;
     font-weight: bold;
@@ -354,10 +350,10 @@
 .userAddress_changeBtnLine>label>img{
     width: 10vw;
     min-width: 50px;
-    max-width: 70px;
+    max-width: 60px;
     height: 10vw;
     min-width: 50px;
-    max-height: 70px;
+    max-height: 60px;
 }
 
 .riderInfo_right{
@@ -372,10 +368,11 @@
 .riderInfo_right>div{
     height: 80px;
     align-items: center;
+    justify-content: space-between;
     display: flex;
 }
 
-.riderInfo_right>div>h2:first-child{
+.riderInfo_right>div>.info_Box>h2:first-child{
     width: 60vw;
     min-width: 90px;
     max-width: 100px;
@@ -404,8 +401,8 @@
 }
 
 .saveBtn_Line img{
-    width: 70px;
-    height: 70px;
+    width: 80px;
+    height: 80px;
 }
 
 .saveBtn_Line *:hover{
