--- a/src/RidingAnywhere-client/css/mypage.css
+++ b/src/RidingAnywhere-client/css/mypage.css
@@ -366,28 +366,35 @@
 }
 
 .riderInfo_right>div{
-    height: 80px;
+    height: 70px;
+    width: 100%;
     align-items: center;
     justify-content: space-between;
     display: flex;
 }
 
-.riderInfo_right>div>.info_Box>h2:first-child{
-    width: 60vw;
-    min-width: 90px;
-    max-width: 100px;
+.riderInfo_right>div>.info_Box{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
-.riderInfo_right h2{
-    text-align: center;
+.riderInfo_right>div>.info_Box>h2:first-child{
+    width: 100px;
+    min-width: 100px;
+    height: 35px;
 }
 
 .profile_inputLine{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    text-align: center;
     width: 250px;
+    height: 35px;
+    gap: 20px;
+    box-sizing: border-box;
 }
 
 [name='changeGender']{
@@ -396,13 +403,13 @@
 
 .saveBtn_Line{
     padding: 0;
-    width: 80px;
-    height: 80px;
+    width: 70px;
+    height: 70px;
 }
 
 .saveBtn_Line img{
-    width: 80px;
-    height: 80px;
+    width: 70px;
+    height: 70px;
 }
 
 .saveBtn_Line *:hover{
@@ -413,7 +420,7 @@
     font-size: 20px;
     text-align: center;
     width: 180px;
-    height: 40px;
+    height: 35px;
     font-weight: bold;
     border-radius: 5px;
     border: 2px solid orange;
@@ -476,6 +483,17 @@
     background-clip: text;
     color: transparent;
     margin: 0;
+}
+
+@media(max-width:800px){
+    .riderInfo_right>div>.info_Box{
+        flex-direction: column;
+        align-items: start;
+    }
+    .riderInfo_right>div>.info_Box>.profile_inputLine{
+        justify-content: start;
+        padding-left: 20px;
+    }
 }
 
 .crewBlockBox{
