--- a/src/RidingAnywhere-client/css/mypage.css
+++ b/src/RidingAnywhere-client/css/mypage.css
@@ -36,21 +36,6 @@
     height: max-content;
 }
 
-@media(max-width:1060px){
-    .myInfoLine{
-        flex-direction: column;
-        align-items: center;
-    }
-    .profile{
-        border-right: none;
-        border-bottom : 2px dotted orange;
-    }
-    .bikeData{
-        max-width: 660px;
-        width: 75vw;
-    }
-}
-
 .profile{
     width: 75vw;
     max-width: 660px;
@@ -114,7 +99,7 @@
 
 .bikeData>div{
     width: 100%;
-    height: 300px;
+    height: max-content;
     text-align: center;
     box-sizing: border-box;
     margin-top: 20px;
@@ -125,10 +110,19 @@
     border-bottom: 2px dotted orange;
 }
 
+.bikeData>div>h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+}
+
 .bikeInfo{
     display: flex;
     height: 150px;
-    justify-content: space-between;
+    padding: 0 20px;
+    box-sizing: border-box;
+    align-items: center;
 }
 
 .bikeInfo input{
@@ -137,13 +131,12 @@
 
 .showBikeBtn{
     width: 25px;
+    min-width: 25px;
+    height: 100%;
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: 30px;
     background-image: url("/public/img/mypage/ShowBikeBtn.png");
-}
-
-.showBikeBtn:hover{
     cursor: pointer;
 }
 
@@ -152,9 +145,7 @@
 }
 
 .bikeInfoLine{
-    position: absolute;
-    transform: translateX(30px);
-    width: 500px;
+    flex-grow: 1;
     height: 150px;
     display: flex;
     justify-content: center;
@@ -162,11 +153,10 @@
 }
 
 .bikeBoxLine{
-    transform: translateX();
     position: absolute;
-    width: 800px;
+    width: max-content;
     display: flex;
-    gap: 12px;
+    gap: 20px;
     transition: 1s;
 }
 
@@ -444,7 +434,7 @@
     font-size: 20px;
     text-align: center;
     width: 180px;
-    height: 35px;
+    height: 55px;
     font-weight: bold;
     border-radius: 5px;
     border: 2px solid orange;
@@ -462,7 +452,6 @@
 
 #userBirthday{
     text-align: center;
-    width: 150px;
     font-size: 20px;
     font-weight: bold;
 }
@@ -472,7 +461,7 @@
     align-items: center;
     justify-content: center;
     width: 80px;
-    height: 35px;
+    height: 55px;
     border-radius: 10px;
     box-sizing: border-box;
     background-color: black;
@@ -508,17 +497,6 @@
     margin: 0;
 }
 
-@media(max-width:800px){
-    .riderInfo_right>div>.info_Box{
-        flex-direction: column;
-        align-items: start;
-    }
-    .riderInfo_right>div>.info_Box>.profile_inputLine{
-        justify-content: start;
-        padding-left: 20px;
-    }
-}
-
 .crewBlockBox{
     display: flex;
     width: 550px;
@@ -548,5 +526,38 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
+    }
+}
+
+@media(max-width:1060px){
+    .myInfoLine{
+        flex-direction: column;
+        align-items: center;
+    }
+    .profile{
+        border-right: none;
+        border-bottom : 2px dotted orange;
+    }
+    .bikeData{
+        max-width: 660px;
+        width: 75vw;
+    }
+    .bikeInfoLine{
+        max-width: 570px;
+
+    }
+}
+
+@media(max-width:800px){
+    .riderInfo_right>div>.info_Box{
+        flex-direction: column;
+        align-items: start;
+    }
+    .riderInfo_right>div>.info_Box>.profile_inputLine{
+        justify-content: start;
+        padding-left: 20px;
+    }
+    .profile_inputLine>input, .profile_inputLine label{
+        height: 35px;
     }
 }
