2024. 10. 23 🛠️ 마이 페이지 반응형 작업 중🚧
🛠️ 바이크 모델 라인 작업 중...

--- a/src/RidingAnywhere-client/css/mypage.css
+++ b/src/RidingAnywhere-client/css/mypage.css
@@ -149,13 +149,14 @@
     height: 150px;
     display: flex;
     justify-content: center;
+    align-content: center;
     overflow: hidden;
 }
 
 .bikeBoxLine{
-    position: absolute;
     width: max-content;
     display: flex;
+    align-items: center;
     gap: 20px;
     transition: 1s;
 }
