--- a/src/RidingAnywhere-client/css/mypage.css
+++ b/src/RidingAnywhere-client/css/mypage.css
@@ -518,7 +518,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 200px;
+    height: max-content;
     h2{
         display: flex;
         margin: 0;
