2024. 10. 23 🛠️ 크루 매니저 페이지 CSS 반응형 작업
🛠️ 크루 매니저 페이지 CSS 반응형 페이지로 작업 중... 🚧

--- a/src/RidingAnywhere-client/css/homepage.css
+++ b/src/RidingAnywhere-client/css/homepage.css
@@ -4,6 +4,7 @@
     justify-content: center;
     box-sizing: border-box;
     gap: 10px;
+    min-height: 400px;
     .CrewHome, .RiderHome{
         width: 45vw;
         min-width: 225px;
