--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -1,46 +1,47 @@
 .crewManager{
-    height: 600px;
     display: flex;
+    box-sizing: border-box;
+    padding: 20px 20px 0 20px;
 }
 
 .crewManager>.crewInfoLine{
     width: 550px;
-    height: 600px;
+    height: max-content;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
 
-    .crewInfoLine_Top{
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        .CrewBtn{
-            z-index: 0;
-            width: 70px;
-            height: 70px;
-            position: absolute;
-            cursor: pointer;
-        }
-        [name='save']{
-            transform: translate(160px);
-            background-size: contain;
-            background-repeat: no-repeat;
-        }
-        [name='change']{
-            transform: translate(220px);
-            background-size: contain;
-            background-repeat: no-repeat;
-        }
-        
+.crewInfoLine>.crewInfoLine_Top{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+    min-height: 60px;
+    .CrewBtn{
+        z-index: 0;
+        width: 70px;
+        height: 70px;
+        position: absolute;
+        cursor: pointer;
     }
+    [name='save']{
+        transform: translate(160px);
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+    [name='change']{
+        transform: translate(220px);
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+    
 }
 
 
 
-.crewManager>.crewInfoLine>.crewInfoBox{
+.crewInfoLine>.crewInfoBox{
     height: 600px;
     display: flex;
     flex-direction: column;
