--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -22,13 +22,12 @@
     box-sizing: border-box;
     padding-left: 10px;
 }
-.crewInfoLine_Top>*{
-    display: flex;
-    flex-grow: 1;
-    height: 100%;
+.crewInfoLine_Top>.block, .crewInfoLine_Top>.crewTopBtnLine{
+    width: 120px;
 }
 
 .crewInfoLine_Top>.crewTopBtnLine{
+    display: flex;
     justify-content: end;
 }
 
