--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -5,11 +5,13 @@
 }
 
 .crewManager>.crewInfoLine{
-    width: 550px;
+    width: 460px;
+    min-width: 460px;
     height: max-content;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
 }
 
 .crewInfoLine>.crewInfoLine_Top{
@@ -40,7 +42,9 @@
 }
 
 .crewInfoLine>.crewInfoBox{
-    height: 600px;
+    width: 100%;
+    height: max-content;
+    gap: 20px;
     display: flex;
     flex-direction: column;
 }
@@ -50,43 +54,58 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 500px;
-    height: 200px;
+    width: 100%;
+    height: max-content;
     border: 2px solid orange;
     border-radius: 10px;
-    margin-bottom: 20px;
-    .line{
-        width: 450px;
-        display: flex;
-        justify-content: space-between;
-    }
+    box-sizing: border-box;
     .addressSelectBox{
         width: 220px;
         justify-content: space-around;
-        select{
-            border: 2px solid orange;
-            border-radius: 10px;
-            background-color: black;
-            color: gold;
-            width: 100px;
-            font-size: 20px;
-            font-weight: bold;
-            text-align: center;
-        }
+        
     }
-    h2{
-        width: 220px;
-        text-align: center;
-        justify-content: center;
-        margin: 15px 0;
-        background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
+    
+}
+.crewInfoBox_Line>.line{
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.line>h2, .line>.addressSelectBox{
+    display: flex;
+    width: 50%;
+    align-items: center;
+}
+
+.line>.addressSelectBox{
+    justify-content: space-around;
+
+    select{
+        border: 2px solid orange;
+        border-radius: 10px;
+        background-color: black;
+        box-sizing: border-box;
+        color: gold;
+        width: 100px;
+        height: 80%;
+        font-size: 20px;
         font-weight: bold;
-        -webkit-text-stroke-width: 0.1px;
-        -webkit-text-stroke-color: black;
-        -webkit-background-clip: text;
-        background-clip: text;
-        color: transparent;
+        text-align: center;
     }
+}
+
+.line>h2{
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
+    font-weight: bold;
+    -webkit-text-stroke-width: 0.1px;
+    -webkit-text-stroke-color: black;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
 }
 
 .crewContext{
