--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -108,11 +108,12 @@
     color: transparent;
 }
 
-.crewContext{
-    width: 500px;
-    height: 310px;
+.crewInfoBox>.crewContext{
+    width: 100%;
+    height: max-content;
     display: flex;
     flex-direction: column;
+    gap: 10px;
      h1{
         text-align: center;
     }
@@ -121,20 +122,15 @@
         width: 70px;
         height: 70px;
         position: absolute;
-        background-size: 70px;
-        cursor: pointer;
-    }
-
-    .crewContext_Top{
-        margin-bottom: 10px;
     }
 
     .crewContextBox{
-        width: 500px;
+        width: 100%;
         height: 230px;
         display: flex;
         border: 2px solid orange;
         border-radius: 10px;
+        box-sizing: border-box;
         justify-content: center;
         align-items: center;
         >h2{
@@ -161,6 +157,23 @@
     }
 }
 
+.crewContext>.crewContext_Top{
+    display: flex;
+    justify-content: space-between;
+}
+
+.crewContext_Top>.block, .crewContext_Top>.contextBtnLine{
+    display: flex;
+    width: 60px;
+    height: 60px;
+}
+
+.contextBtnLine>label{
+    width: 100%;
+    height: 100%;
+    background-size: 60px;
+    cursor: pointer;
+}
 .crewListLine{
     width: 730px;
     display: flex;
