--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -1,6 +1,7 @@
 .crewManager{
     display: flex;
     box-sizing: border-box;
+    gap: 20px;
     padding: 20px 20px 0 20px;
 }
 
@@ -55,7 +56,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: max-content;
+    height: 180px;
+    min-height: 180px;
     border: 2px solid orange;
     border-radius: 10px;
     box-sizing: border-box;
@@ -167,18 +169,16 @@
     cursor: pointer;
 }
 .crewListLine{
-    width: 730px;
+    width: 55vw;
+    max-width: 680px;
+    min-width: 480px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    >h1{
-        text-align: center;
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-    >.crewMenberBoxLine{
-        width: 700px;
-        height: 520px;
+    gap: 10px;
+    >.crewMemberBoxLine{
+        width: 100%;
+        height: 500px;
         display: flex;
         flex-direction: column;
         align-items: center;
